--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,18 +7,18 @@
 
 <div class='container readable'>
   <h1 class="text-center"><%= octobox_round(80) %> <span class='align-middle'>Octobox</span></h1>
-  <h3 class='text-center pt-3'>Untangle your GitHub Notifications</h3> 
+  <h3 class='text-center pt-3'><%= t('home.strapline') %></h3> 
   <h5 class='text-center font-weight-light'>
-      <%= number_to_human Notification.count %> notifications managed, and counting &#8230
+      <%= number_to_human Notification.count %> <%= t('home.counter') %>&#8230
   </h5>
   <div class='text-center'>
     <%= image_tag 'screenshot.png', class: 'screenshot mt-3', alt: 'Octobox Screenshot' %>
   </div>
 
-  <h3 id='sound-like-you' class='pt-3'>Sound like you?</h3>
-  <p class='text-large'>You often wonder whether that issue you can't find was a figment of your imagination. You may even wake up in a cold sweat at the thought of hundreds of notifications landing in your inbox each morning.</p>
+  <h3 id='sound-like-you' class='pt-3'><%= t('home.sound_like_you.head')%></h3>
+  <p class='text-large'><%= t('home.sound_like_you.p0')%></p>
 
-  <p class='text-large'>Many developers, and even some GitHub staff, use email filters to manage their notifications. If you'd prefer to stay away from email then Octobox is for you:</p>
+  <p class='text-large'><%= t('home.sound_like_you.p1')%></p>
 
   <div id='dont-lose-track' class="card shadow-sm mb-3">
     <div class="card-body">
@@ -27,8 +27,8 @@
           <%= octicon 'inbox', height: 50 %>
         </div>
         <div class="media-body">
-          <h5>Don't lose track</h5>
-          Octobox adds an extra "archived" state to each notification so you can mark it as "done". If anything happens on an archived thread, issue or PR, Octobox will move it back into your inbox.
+          <h5><%= t('home.dont_lose_track.head')%></h5>
+          <%= t('home.dont_lose_track.p0')%>
         </div>
       </div>
     </div>
@@ -40,8 +40,8 @@
           <%= octicon 'search', height: 50 %>
         </div>
         <div class="media-body">
-          <h5>Keep your focus</h5>
-          Search and filter notifications by repository, organisation, type, action, state, CI status and reason and keep notifications from bots alongside your regular labels, author and assignees.
+          <h5><%= t('home.keep_your_focus.head')%></h5>
+          <%= t('home.keep_your_focus.p0')%>
         </div>
       </div>
     </div>
@@ -53,42 +53,42 @@
           <%= octicon 'sync', height: 50 %>
         </div>
         <div class="media-body">
-          <h5>Stay fresh</h5>
-          Keep those notifications up to date with issue/pull-request status, CI status, labels and more shown alongside basic title, organisation, repo and type information. <a href='#install-the-app'>Read more...</a>
+          <h5><%= t('home.stay_fresh.head')%></h5>
+          <%= t('home.stay_fresh.p0')%>
+          <a href='#install-the-app'><%= t('home.stay_fresh.link')%></a>
         </div>
       </div>
     </div>
   </div>
 
   <% if Octobox.github_app? %>
-    <h3 id='install-the-app' class='pt-5'>Liven up notifications with the GitHub app</h3>
-    <p class='text-large'>By default Octobox will pull basic public and private notification information:</p>
+    <h3 id='install-the-app' class='pt-5'><%= t('home.install_the_app.head')%></h3>
+    <p class='text-large'><%= t('home.install_the_app.p0')%></p>
     
-    <%= image_tag 'notification-basic.png', class: 'screenshot shadow-sm mb-4', alt: 'Basic notification' %>
+    <%= image_tag 'notification-basic.png', class: 'screenshot shadow-sm mb-4', alt: t('home.install_the_app.button') %>
     
-    <p class='text-large'>Install the GitHub app to add live information on issue, PR, and CI status, labels, authors and 
-    more to your organisation's notifications:</p>
+    <p class='text-large'><%= t('home.install_the_app.p1')%></p>
     
-    <%= image_tag 'notification-enhanced.png', class: 'screenshot shadow-sm mb-4', alt: 'Enhanced notification' %>
+    <%= image_tag 'notification-enhanced.png', class: 'screenshot shadow-sm mb-4', alt: t('home.install_the_app.enhanced_alt_text') %>
 
     <div class='text-center'>
       <%= link_to Octobox.config.app_url, class: 'btn btn-lg btn-dark' do %>
-        <span class='mr-1'>Install the GitHub App</span>
+        <span class='mr-1'><%= t('home.install_the_app.basic_alt_text')%></span>
         <%= octicon 'briefcase', height: 22 %>
       <% end %>
     </div>
   <% end %>
 
   <% if Octobox.octobox_io? %>
-    <h3 id='pricing' class='pt-5'>Pricing</h3>
-    <p class='pt-3 text-large'>Octobox is <b>free for open source</b> projects with basic notifications for private projects. To add <a href='#enhanced-notifications'>enhanced notifications</a> for private repositories to your organisation's account:</p>
+    <h3 id='pricing' class='pt-5'><%= t('home.pricing.head')%></h3>
+    <p class='pt-3 text-large'><%= t('home.pricing.p0')%>Octobox is <b><%= t('home.pricing.bold')%></b> <%= t('home.pricing.p1')%> <a href='#enhanced-notifications'><%= t('home.pricing.link')%></a> <%= t('home.pricing.p2')%></p>
     <div class='d-flex flex-column flex-lg-row pt-3 justify-content-center'>
       <%= render('pages/opencollective')%>
       <%= render('pages/github')%>
     </div>
-    <p class='text-large'>Wondering why there are two options? <a href='/pricing#why'>Read more about our pricing strategy</a>.</p>
+    <p class='text-large'><%= t('home.pricing.p3')%> <a href='/pricing#why'><%= t('home.pricing.read_more')%></a>.</p>
 
-    <h3 id='users' class='pt-3'>Used by developers from</h3>
+    <h3 id='users' class='pt-3'><%= t('home.used_by.head')%></h3>
     <div class="row mt-4">
       <div class="col">
         <% used_by_orgs.each do |org| %>
@@ -100,19 +100,19 @@
 
 
 
-  <h3 id='run-your-own' class='pt-5'>Run your own Octobox</h3>
+  <h3 id='run-your-own' class='pt-5'><%= t('home.run_your_own.head')%></h3>
 
-  <p class='text-large'>The Octobox team hosts a shared instance of Octobox at <a href="https://octobox.io/">octobox.io</a>, but perhaps you're looking to host your own or get yourself set up to contribute to Octobox? Fantastic! There are a number of install options available to you, check out the <a href="https://github.com/octobox/octobox/blob/master/docs/INSTALLATION.md">installation guide</a>.</p>
+  <p class='text-large'><%= t('home.run_your_own.p0')%> <a href="https://octobox.io/">octobox.io</a><%= t('home.run_your_own.p1')%><a href="https://github.com/octobox/octobox/blob/master/docs/INSTALLATION.md"><%= t('home.run_your_own.link')%></a>.</p>
 
-  <h3 id='contribute' class='pt-5'>Contribute</h3>
+  <h3 id='contribute' class='pt-5'><%= t('home.contribute.head')%></h3>
 
-  <p class='text-large'>Octobox is open source and the source code is hosted at <a href="https://github.com/octobox/octobox">GitHub</a>. If you have an idea for a feature or enhancement, open an <a href="https://github.com/octobox/octobox/issues/new">issue</a> or a pull request.</p>
+  <p class='text-large'><%= t('home.contribute.p0')%> <a href="https://github.com/octobox/octobox">GitHub</a>. <%= t('home.contribute.p1')%> <a href="https://github.com/octobox/octobox/issues/new"><%= t('home.contribute.issue_link')%></a> <%= t('home.contribute.p2')%>.</p>
 
-  <p class='text-large'>If you want to contribute you'll find we're a welcoming bunch. If you don't know where to start, take a look at the issues tagged as <a href="https://github.com/octobox/octobox/issues?q=is%3Aopen+is%3Aissue+label%3A%22help+wanted%22">"Help Wanted"</a>.</p>
+  <p class='text-large'><%= t('home.contribute.p3')%> <a href="https://github.com/octobox/octobox/issues?q=is%3Aopen+is%3Aissue+label%3A%22help+wanted%22">"<%= t('home.contribute.label_link')%>"</a>.</p>
 
-  <p class='text-large'>You can also help triage issues. This can include reproducing bug reports, or asking for vital information such as version numbers or reproduction instructions. If you would like to start triaging issues, one easy way to get started is to <a href="https://www.codetriage.com/octobox/octobox">subscribe to Octobox on CodeTriage</a>.</p>
+  <p class='text-large'><%= t('home.contribute.p4')%>  <a href="https://www.codetriage.com/octobox/octobox"><%= t('home.contribute.triage_link')%></a>.</p>
 
-  <p class='text-large mb-5'>Finally, if you would like to become a maintainer, we will consider adding you if you contribute frequently to the project. Feel free to ask.</p>
+  <p class='text-large mb-5'><%= t('home.contribute.p5')%></p>
 
   <%= render 'layouts/footer'%>
 </div>
