* add translations for header

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,11 +5,11 @@
   <div class="position-relative dropdown">
     <div>
       <button class="btn btn-dark navbar-toggler search-toggler" type="button" data-toggle="collapse" data-target="#search" aria-controls="search" aria-expanded="false" aria-label="Toggle search">
-        <span class="sr-only">Toggle search</span>
+        <span class="sr-only"><%= t('header.toggle_search') %></span>
         <%= octicon 'search', height: 16, class: 'text-muted' %>
       </button>
       <button id='navbarnav_toggle' class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="sr-only">Toggle navigation</span>
+        <span class="sr-only"><%= t('header.toggle_navigation') %></span>
         <% if current_user %>
           <%= image_tag current_user.github_avatar_url + "?size=64", width: 32, height:32, class: 'img-rounded navbar-avatar', alt: '' %>
         <% else %>
@@ -22,8 +22,8 @@
     <%= form_tag root_path, method: :get, class: 'form-inline collapse navbar-collapse', id: 'search', enforce_utf8: false do |f| %>
       <div class="search-sugguestion-section d-inline-flex justify-content-between align-items-center w-100">
         <div class="search-input-box position-relative d-flex align-items-center w-100">
-          <%= text_field_tag 'q', @search.to_query, placeholder: 'Search...', class: 'custom-input form-control', id: 'search-box', 'aria-label' => 'Search', :autocomplete => "off" %>
-          <div class="btn btn-sm btn-link search-help d-none d-md-block" title='Search Cheat Sheet' data-toggle="modal" data-target="#search-help">
+          <%= text_field_tag 'q', @search.to_query, placeholder: t('header.search.placeholder'), class: 'custom-input form-control', id: 'search-box', 'aria-label' => 'Search', :autocomplete => "off" %>
+          <div class="btn btn-sm btn-link search-help d-none d-md-block" title='#{t('header.search.cheat_sheet')}' data-toggle="modal" data-target="#search-help">
             <%= octicon 'question', :height => 16 %>
           </div>
           <div class="search-sugguestion-section d-inline-flex justify-content-between align-items-center">
@@ -40,11 +40,11 @@
         <% if Octobox.octobox_io? && !current_user.github_app_authorized? %>
           <a href="<%= Octobox.config.app_url %>" class='btn btn-sm btn-outline-light'>
             <%= octicon 'briefcase', height: 16, class: 'mr-1' %>
-            Install the GitHub App
+            <%= t('header.install_the_app') %>
           </a>
         <% else %>
-          <a href="https://opencollective.com/octobox/" class='opencollective btn btn-sm' target='_blank' rel="noopener" aria-label='Support Octobox on OpenCollective'>
-            <%= octicon 'gift', height: 16, data: {toggle: "tooltip", placement: "bottom"}, title: 'Support Octobox on OpenCollective' %>
+          <a href="https://opencollective.com/octobox/" class='opencollective btn btn-sm' target='_blank' rel="noopener" aria-label='#{t('header.support_on_opencollective')}'>
+            <%= octicon 'gift', height: 16, data: {toggle: "tooltip", placement: "bottom"}, title: t('header.support_on_opencollective') %>
           </a>
         <% end %>
       </li>
@@ -57,16 +57,16 @@
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
           <%= link_to "#{Octobox.config.github_domain}", class: 'dropdown-item', target: "_blank", rel: "noopener" do %>
             <%= octicon 'mark-github', height: 16, class: 'text-muted' %>
-            GitHub Dashboard
+            <%= t('header.dropdown.dashboard') %>
           <% end %>
           <%= link_to documentation_path(anchor: 'support'), class: 'dropdown-item', target: "_blank", rel: "noopener" do %>
             <%= octicon 'question', height: 16, class: 'text-muted' %>
-            Octobox Support
+            <%= t('header.dropdown.support') %> 
           <% end %>
           <% if current_user.admin? %>
             <%= link_to admin_path, class: 'dropdown-item' do %>
               <%= octicon 'gist-secret', height: 16, class: 'text-muted' %>
-              Admin
+              <%= t('header.dropdown.admin') %>
             <% end %>
             <% if Octobox.background_jobs_enabled? %>
               <%= link_to admin_sidekiq_web_path, class: 'dropdown-item' do %>
@@ -77,30 +77,30 @@
           <% end %>
           <%= link_to "/documentation", class: 'dropdown-item' do %>
             <%= octicon 'book', height: 16, class: 'text-muted' %>
-            User Documentation
+            <%= t('header.dropdown.user_documentation') %>
           <% end %>
            <% if Octobox.config.native_link %>
               <%= link_to Octobox.config.native_link, class: 'dropdown-item' do %>
                 <%= octicon 'desktop-download', height: 16, class: 'text-muted' %>
-                Download Desktop App
+                <%= t('header.dropdown.download_desktop_app') %>
               <% end %>
           <% end %>
           <% if File.exist?(Rails.root.join('public', 'docs', 'index.html')) %>
             <%= link_to "/docs/", class: 'dropdown-item' do %>
               <%= octicon 'code', height: 16, class: 'text-muted' %>
-              API Documentation
+              <%= t('header.dropdown.api_documentation') %>
             <% end %>
           <% end %>
           <%= link_to "/settings", class: 'dropdown-item' do %>
             <%= octicon 'settings', height: 16, class: 'text-muted' %>
-            Settings
+            <%= t('header.dropdown.settings') %>
           <% end %>
           <div class="dropdown-divider d-md-none"></div>
-          <a class="d-md-none" href="https://opencollective.com/octobox/" class='opencollective' target='_blank' rel="noopener"><%= octicon 'gift', height: 16, class: 'text-muted' %> Donate</a>
+          <a class="d-md-none" href="https://opencollective.com/octobox/" class='opencollective' target='_blank' rel="noopener"><%= octicon 'gift', height: 16, class: 'text-muted' %> <%= t('header.dropdown.donate') %></a>
           <div class="dropdown-divider"></div>
           <%= link_to logout_path, class: 'dropdown-item' do %>
             <%= octicon 'sign-out', height: 16, class: 'text-muted' %>
-            Logout
+            <%= t('header.dropdown.logout') %>
           <% end %>
         </div>
       </li>
