* add translations for footer

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,16 +1,16 @@
 <div class="footer text-muted small pt-3">
   <p>
     © 2018 <a href='https://github.com/andrew' >Andrew Nesbitt</a>,
-    <%= link_to 'et al', "#{Octobox.config.source_repo}/graphs/contributors", target: '_blank', rel: "noopener" %>
+    <%= link_to t('footer.et_al'), "#{Octobox.config.source_repo}/graphs/contributors", target: '_blank', rel: "noopener" %>
     &mdash;
-    Logo by
+    <%= t('footer.logo_by') %>
     <%= link_to 'Raeha Keller', "https://www.etsy.com/uk/people/PrincessRaeha", target: '_blank', rel: "noopener" %> 
     &mdash;
-    <%= link_to 'Source', Octobox.config.source_repo, target: '_blank', rel: "noopener" %>
-    available under
+    <%= link_to t('footer.source'), Octobox.config.source_repo, target: '_blank', rel: "noopener" %>
+    <%= t('footer.available_under') %>
     <%= link_to 'AGPL 3.0', "#{Octobox.config.source_repo}/blob/master/LICENSE.txt", target: '_blank', rel: "noopener" %>
     <% if Octobox.octobox_io? %>
-      &mdash; <a href='/terms' target="_blank" rel="noopener">Terms</a> &amp; <a href='/privacy' target="_blank" rel="noopener">Privacy Policy</a>
+      &mdash; <a href='/terms' target="_blank" rel="noopener"><%= t('footer.terms') %></a> &amp; <a href='/privacy' target="_blank" rel="noopener"><%= t('footer.privacy_policy') %></a>
     <% end %>
   </p>
 </div>
