* add translations tor shotcuts

--- a/app/views/shared/_keyboard_mappings.html.erb
+++ b/app/views/shared/_keyboard_mappings.html.erb
@@ -5,7 +5,7 @@
         <div class="key">.</div> or <div class="key">r</div>
       </td>
       <td>
-        Refresh
+        <%= t('views.shared.keyboard_mappings.r') %>
       </td>
     </tr>
     <tr>
@@ -13,7 +13,7 @@
         <div class="key">j</div>
       </td>
       <td>
-        Move down the list
+        <%= t('views.shared.keyboard_mappings.j') %>
       </td>
     </tr>
     <tr>
@@ -21,7 +21,7 @@
         <div class="key">k</div>
       </td>
       <td>
-        Move up the list
+        <%= t('views.shared.keyboard_mappings.k') %>
       </td>
     </tr>
     <tr>
@@ -29,7 +29,7 @@
         <div class="key">s</div>
       </td>
       <td>
-        Star current notification
+        <%= t('views.shared.keyboard_mappings.s') %>
       </td>
     </tr>
     <tr>
@@ -37,7 +37,7 @@
         <div class="key">x</div>
       </td>
       <td>
-        Mark current notification
+        <%= t('views.shared.keyboard_mappings.x') %>
       </td>
     </tr>
     <tr>
@@ -45,7 +45,7 @@
         <div class="key">a</div>
       </td>
       <td>
-        Select/deselect all
+        <%= t('views.shared.keyboard_mappings.a') %>
       </td>
     </tr>
     <tr>
@@ -53,7 +53,7 @@
         <div class="key">y</div> or <div class="key">e</div>
       </td>
       <td>
-        Archive current/marked notification(s)
+        <%= t('views.shared.keyboard_mappings.e') %>
       </td>
     </tr>
     <tr>
@@ -62,7 +62,7 @@
         <div class="key">m</div>
       </td>
       <td>
-        Mute current/marked notification(s)
+        <%= t('views.shared.keyboard_mappings.m') %>
       </td>
     </tr>
     <tr>
@@ -70,7 +70,7 @@
         <div class="key">d</div>
       </td>
       <td>
-        Mark current/marked notification(s) as read here and on GitHub
+        <%= t('views.shared.keyboard_mappings.d') %>
       </td>
     </tr>
     <tr>
@@ -78,7 +78,7 @@
         <div class="key">#</div>
       </td>
       <td>
-        Delete current/marked notification(s)
+        <%= t('views.shared.keyboard_mappings.hash') %>
       </td>
     </tr>
     <tr>
@@ -86,7 +86,7 @@
         <div class="key">o</div> or <div class="key">Enter</div>
       </td>
       <td>
-        Open current notification in a new window
+        <%= t('views.shared.keyboard_mappings.o') %>
       </td>
     </tr>
     <tr>
@@ -94,7 +94,7 @@
         <div class="key">?</div>
       </td>
       <td>
-        Show this help menu
+        <%= t('views.shared.keyboard_mappings.question_mark') %>
       </td>
     </tr>
     <tr>
@@ -102,7 +102,7 @@
         <div class="key">esc</div>
       </td>
       <td>
-        Close modal, thread OR clear filters
+        <%= t('views.shared.keyboard_mappings.esc') %>
       </td>
     </tr>
   </tbody>
